<resources>
    <string name="app_name">SunSpec</string>
    <string name="action_settings">Settings</string>
    <string name="nan_values">NaN Values</string>
    <string name="lese_ip_sunspec_ger_te">Lese IP Sunspec Geräte</string>
    <string name="itemaddip">ItemAddIP</string>
    <string name="lese_daten">Lese Daten</string>
    <string name="wert">Wert</string>
    <string name="einheit">Einheit</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="ip_Adresse">IP Address</string>
    <string name="port">Port</string>
    <string name="start_adresse">Start Adresse</string>
    <string name="sunspec_hosts">SunSpec Hosts</string>
    <string name="unit_id">Unit ID</string>
    <string name="links">links</string>
    <string name="erneuern">Erneuern</string>
    <string name="optionen">Optionen</string>
    <string name="unterdruecke_nan_werte">Unterdrücke NaN Werte</string>
    <string name="suche_sunspec_host_im_netz">Suche SunSpec Host im Netz</string>
    <string name="suche_starten">Suche starten</string>
    <string name="textview">TextView</string>
    <string name="hinzufuegen">hinzufügen</string>
    <string name="setup">Setup</string>
    <string name="list">List</string>
    <string name="schaltflaeche_links">Schaltfläche links</string>
    <string name="schaltflaeche_nach_rechts">Schaltfläch nach rechts</string>
    <string name="durchsucht_das_netzwerk">Durchsucht das Netzwerk</string>
    <string name="loescht_die_daten">Löscht die Daten</string>
    <string name="name">Name</string>
    <string name="wert_einheit">Wert [Einheit]</string>
    <string name="t502">502</string>
    <string name="t126">126</string>
    <string name="t40000">40000</string>
</resources>
